# spider

./: .gitignore  Readme.txt  package-lock.json  pyproject.toml
Browser/caranalysis/: carPicture.py  requests.html
Browser/html/: a.csv  a.txt  coolpc.html  product_info.xlsx  spiderpc.py
Excel/: Diff_excel.py
PDF/: utils.py
PDF/PDF2/: pdf2.py
PDF/PDF2JPG/: pdf2jpg.py
PDF/RemovePDFpassword/: RemovePDFpassword.py  RemovePDFpassword2.py
PDF/RemovePDFstarUML/: RemovePDFstarUML copy.py  tt.py
PDF/ppt2pdf/: ppt2pdf.py
PDF/readpdf/: output.docx  readpdf.py  tt.py  viewPDFlimit.py
Picture/: car_registration_data.csv  test.py
Picture/readPicture/: 7car-202405020741-1.txt  analysisPicture.py  螢幕擷取畫面 2024-05-31 002150.txt  螢幕擷取畫面 2024-05-31 032946.txt
dcard/browser/: D1.py  D2.py  D3.py  D4.py  S.js  SingleArticle.py  tempCodeRunnerFile.js
dcard/dcard_articles/: style.css  template.html
myship/: browser.py  clothes.txt  clothes_list.txt  edge_killer.py  log.txt  main.py  outline.txt  stretch_name.py  test.py
